tests/errors/dynamic-share.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint |L - G| >= |L - L+2|
    ┌─ tests/errors/dynamic-share.fil:13:3
    │
 12 │   m1 := M<L>(c, d);
    │   ----------------- Invoke provides binding M.G=L
 13 │   m0 := M<G>(a, b);
    │   ^^^^^^^^^^^^^^^^^ Conflicting invoke. Invoke provides binding M.G=G
    │
    ┌─ ./primitives/core.fil:190:3
    │
190 │   @interface[G, G+2] go_G: 1,
    │   -------------------------- @interface for G specifies that invokes must be |L - L+2| cycles apart

